--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,17 @@
 <router-outlet></router-outlet>
-<h2>Books</h2>
-<app-book-list
-  class="book-list"
-  [books]="(books$ | async)!"
-  (add)="onAdd($event)"
-></app-book-list>
+<div class="m-4 flex flex-col">
+  <h2>Books</h2>
+  <app-book-list
+    class="mb-4"
+    [books]="(books$ | async)!"
+    (add)="onAdd($event)"
+  ></app-book-list>
 
-<h2>My Collection</h2>
-<app-book-collection
-  class="book-collection"
-  [books]="(bookCollection$ | async)!"
-  (remove)="onRemove($event)"
->
-</app-book-collection>
+  <h2>My Collection</h2>
+  <app-book-collection
+    class="mb-4"
+    [books]="(bookCollection$ | async)!"
+    (remove)="onRemove($event)"
+  >
+  </app-book-collection>
+</div>
